# framework-selenium-cblack

./: .gitignore  README.md  pyproject.toml
automation/: automation_login.py  automation_tool.py  ipython_browser.py  muasamcong-automation.py
config/: browsers.json  config.json  environments.json
data/: test_data.json
locators/: home_locators.py  login_locators.py  muasamcong_locator.py  users_locators.py
pages/: base_page.py  home_page.py  login_page.py
tests/: conftest.py  test_login.py  test_login_with_report.py
utils/: config_reader.py  data_generator.py  data_loader.py  driver_factory.py  login_report_generator.py  pytest_data_helpers.py  screenshot.py
